--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,28 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+aliases:
+  - &ubuntu-env
+    machine:
+      image: ubuntu-2004:202104-01
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  create-release:
+    <<: *ubuntu-env
     steps:
-      - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Write DSA private key to file
+          command: |
+            dsaContent="-----BEGIN DSA PRIVATE KEY-----\n"
+            dsaContent+=${env:DSA_PRIV_KEY//' '/'\n'}
+            dsaContent+="\n-----END DSA PRIVATE KEY-----\n"
+            echo $dsaContent
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
-      - say-hello
+      - create-release
